Resume Flow/objects/Feedback__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email (Optional)</label>
    <type>Email</type>
</CustomField>