Resume Flow/objects/Feedback__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <defaultValue>&quot;Please Enter your feedback...&quot;</defaultValue>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>